[!HOTFIX] : 아티클 profile URL 추가
Change-Id: Ic58444ae78809a1f99c2d9ba537aa9b95a775446